--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React</title>
 </head>
 
-<body>
+<body class="bg-[#F6F8FA]">
   <div id="root"></div>
   <div id="modal-root"></div>
   <script type="module" src="/src/main.jsx"></script>
