--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/un.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>UnStop</title>
 </head>
 
 <body class="bg-[#F6F8FA]">
   <div id="root"></div>
-  <div id="modal-root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
